--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-scroll": "^1.9.0",
-    "zod": "^3.23.4"
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
